--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node server/index.js",
-    "build": "jsx script/build.js",
+    "build": "vite build",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "jsc",
     "db:push": "drizzle-kit push"
